--- a/src/public/css/admin/style.css
+++ b/src/public/css/admin/style.css
@@ -71,7 +71,9 @@ body {
 }
 .navigation ul li a .icon {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 60px;
   height: 50px;
   line-height: 50px;
