--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -1,61 +1,61 @@
 <div class="navigation">
   <ul>
     <li>
-      <a href="/">
-        <span class="icon" style="min-width: 55px;"></span>
-        <span class="title"><h1>STORE</h1></span>
+      <a href="/admin/dashboard">
+        <span class="icon" style="min-width: 30px;"></span>
+        <span class="title"><h2>BOOKSTORE</h2></span>
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-home"></i></span>
         <span class="title">Tổng Quan</span>
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-hands"></i></span>
         <span class="title">Nhóm Quyền</span>
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-address-book"></i></span>
         <span class="title">Tài Khoản</span>
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/admin/employee">
         <span class="icon"><i class="fas fa-users-cog"></i></span>
         <span class="title">Nhân Viên</span>
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-users"></i></span>
         <span class="title">Khách Hàng</span>
       </a>
     </li>
     <li>
-      <a href="/product">
+      <a href="/admin/warehouse/product">
         <span class="icon"><i class="fas fa-gifts"></i></span>
         <span class="title">Sản Phẩm</span>
       </a>
     </li>
     <li>
-      <a href="/category">
+      <a href="/admin/warehouse/category">
         <span class="icon"><i class="fas fa-clipboard-list"></i></span>
         <span class="title">Danh Mục</span>
       </a>
     </li>
     <li>
-      <a href="/provider">
+      <a href="/admin/warehouse/provider">
         <span class="icon"><i class="fas fa-warehouse"></i></span>
         <span class="title">Nhà Cung Cấp</span>
       </a>
     </li>
     <li>
-      <a href="/receipt">
+      <a href="/admin/warehouse/receipt">
         <span class="icon"><i class="fas fa-file-invoice-dollar"></i></span>
         <span class="title">Hóa Đơn Nhập</span>
       </a>
@@ -67,13 +67,13 @@
       </a>
     </li>
     <li>
-      <a href="/statistic">
+      <a href="/admin/warehouse/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
         <span class="title">Thống Kê</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/admin/logout">
         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
         <span class="title">Đăng Xuất</span>
       </a>
