--- a/src/resources/views/admin/updatepm.hbs
+++ b/src/resources/views/admin/updatepm.hbs
@@ -5,11 +5,11 @@
 <div class="permission-table">
   <div class="inside-table">
     <div class="permissionHeader">
-      <h2>Thêm nhóm quyền mới</h2>
+      <h2>Sửa nhóm quyền</h2>
       <a href="/admin/permissions"><button class="cancel-btn">Quay lại</button></a>
     </div>
 
-    <form action="/admin/permissions/update" method="post">
+    <form action="/admin/permissions/update/{{role.ID_NhomQuyen}}" method="post">
       <div class="form-group">
         <label for="name" class="form-label">Tên nhóm quyền</label>
         <input
@@ -17,23 +17,17 @@
           class="form-control"
           id="name"
           name="name"
+          value="{{role.TenNhomQuyen}}"
           required
         />
+        <input type="hidden" name="id" value="{{role.ID_NhomQuyen}}" />
+
       </div>
+   
+      <label for="role-{{matchedRole.id}}">{{matchedRole.name}}</label>
+        <input type="hidden" name="matchedRoleId" value="{{matchedRole.id}}" />
 
-      <div class="role-list">
-  {{#each roles}}
-  
-    <div class="role-item">
-      <input 
-        type="checkbox" 
-        class="role-toggle" 
-        data-role="{{this.id}}" 
-        id="role-{{this.id}}"
-      />
-      <label for="role-{{this.id}}">{{this.name}}</label>
-
-      <div class="permission-panel" id="permission-{{this.id}}" style="display: none;">
+      <div class="permission-panel" id="permission-{{matchedRole.id}}">
         <table class="permission-table">
           <thead>
             <tr>
@@ -45,37 +39,30 @@
             </tr>
           </thead>
           <tbody>
-            {{#each this.permissions}}
+            {{#each matchedRole.permissions}}
               <tr>
-                <td>{{this.name}}</td>
-                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="view" /></td>
-                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="create" /></td>
-                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="edit" /></td>
-                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="delete" /></td>
+                <td>{{this.name}}</td> <!-- Dùng {{this.name}} để lấy tên permission -->
+                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="view"       {{#if
+                    (or (includes this.pm "view") (includes this.pm "all"))
+                  }} checked  {{/if}}
+     /></td> 
+                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="create"   {{#if
+                    (or (includes this.pm "create") (includes this.pm "all"))
+                  }} checked  {{/if}} /></td>
+                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="edit"   {{#if
+                    (or (includes this.pm "edit") (includes this.pm "all"))
+                  }} checked  {{/if}}/></td>
+                <td><input type="checkbox" name="quyen[{{../id}}][{{this.code}}][]" value="delete"  {{#if
+                    (or (includes this.pm "delete") (includes this.pm "all"))
+                  }} checked  {{/if}} /></td>
               </tr>
             {{/each}}
           </tbody>
         </table>
       </div>
-    </div>
-  {{/each}}
-</div>
-
-      <button class="add-btn" type="submit">Thêm</button>
+    
+      <button class="add-btn" type="submit">Lưu</button>
     </form>
 
   </div>
 </div>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const roleToggles = document.querySelectorAll(".role-toggle");
-
-    roleToggles.forEach((toggle) => {
-      toggle.addEventListener("change", function () {
-        const panel = document.getElementById("permission-" + this.dataset.role);
-        panel.style.display = this.checked ? "block" : "none";
-      });
-    });
-  });
-</script>
