Thêm data tỉnh thành, fix user

--- a/src/resources/views/user/thanhtoan.hbs
+++ b/src/resources/views/user/thanhtoan.hbs
@@ -31,17 +31,16 @@
       </div>
 
       <!-- Tỉnh/Thành phố -->
+      <!-- Tỉnh/Thành phố -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">Tỉnh/Thành
           Phố</label>
         <select
+          id="provinceSelect"
           name="thanhpho"
           class="w-full border border-gray-300 rounded-xl px-4 py-2 focus:ring-2 focus:ring-blue-500 transition"
         >
           <option value="">Chọn tỉnh/thành phố</option>
-          <option value="Hà Nội">Hà Nội</option>
-          <option value="Hồ Chí Minh">Hồ Chí Minh</option>
-          <option value="Đà Nẵng">Đà Nẵng</option>
         </select>
       </div>
 
@@ -51,22 +50,11 @@
           class="block text-sm font-medium text-gray-700 mb-1"
         >Quận/Huyện</label>
         <select
+          id="districtSelect"
           name="quan"
           class="w-full border border-gray-300 rounded-xl px-4 py-2 focus:ring-2 focus:ring-blue-500 transition"
         >
-          <option>Chọn quận/huyện</option>
-          <option value="1">Quận 1</option>
-          <option value="2">Quận 2</option>
-          <option value="3">Quận 3</option>
-          <option value="4">Quận 4</option>
-          <option value="5">Quận 5</option>
-          <option value="6">Quận 6</option>
-          <option value="7">Quận 7</option>
-          <option value="8">Quận 8</option>
-          <option value="9">Quận 9</option>
-          <option value="10">Quận 10</option>
-          <option value="11">Quận 11</option>
-          <option value="12">Quận 12</option>
+          <option value="">Chọn quận/huyện</option>
         </select>
       </div>
 
@@ -234,3 +222,5 @@
   </div>
 
 </form>
+
+<script src="/js/thanhtoan.js"></script>
