--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -78,7 +78,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 hd-color">
-          <li class="nav-item"><a class="nav-link active" href="#">Trang chủ</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/user">Trang chủ</a></li>
           <li class="nav-item dropdown hd-color d-none d-lg-block">
             <a
               class="nav-link dropdown-toggle"
