--- a/src/resources/views/user/home.hbs
+++ b/src/resources/views/user/home.hbs
@@ -71,9 +71,9 @@
             <div class="divider">
               <span></span>
             </div>
-   
+  
  <div class="container" style="max-width:90%">
-  {{#each popularproducts}}
+  {{#each popularProducts}}
  
     <div class="danh-muc-de-cu">
       <h3>{{this.DanhMuc.TenDanhMuc}}</h3>
