--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -36,40 +36,62 @@
         <span class="title">Khách Hàng</span>
       </a>
     </li>
-    <li>
-      <a href="/admin/warehouse/product">
-        <span class="icon"><i class="fas fa-gifts"></i></span>
-        <span class="title">Sản Phẩm</span>
-      </a>
-    </li>
-    <li>
-      <a href="/admin/warehouse/category">
-        <span class="icon"><i class="fas fa-clipboard-list"></i></span>
-        <span class="title">Danh Mục</span>
-      </a>
-    </li>
-    <li>
-      <a href="/admin/warehouse/provider">
-        <span class="icon"><i class="fas fa-warehouse"></i></span>
-        <span class="title">Nhà Cung Cấp</span>
-      </a>
-    </li>
-    <li>
-      <a href="/admin/warehouse/receipt">
-        <span class="icon"><i class="fas fa-file-invoice-dollar"></i></span>
-        <span class="title">Hóa Đơn Nhập</span>
-      </a>
-    </li>
+    {{#if
+      (or (includes permissions "qlsanpham") (includes permissions "qlkho"))
+    }}
+      <li>
+        <a href="/admin/warehouse/product">
+          <span class="icon"><i class="fas fa-gifts"></i></span>
+          <span class="title">Sản Phẩm</span>
+        </a>
+      </li>
+    {{/if}}
+    {{#if
+      (or (includes permissions "qldanhmuc") (includes permissions "qlkho"))
+    }}
+      <li>
+        <a href="/admin/warehouse/category">
+          <span class="icon"><i class="fas fa-clipboard-list"></i></span>
+          <span class="title">Danh Mục</span>
+        </a>
+      </li>
+    {{/if}}
+    {{#if (or (includes permissions "qlncc") (includes permissions "qlkho"))}}
+      <li>
+        <a href="/admin/warehouse/provider">
+          <span class="icon"><i class="fas fa-warehouse"></i></span>
+          <span class="title">Nhà Cung Cấp</span>
+        </a>
+      </li>
+    {{/if}}
+    {{#if (or (includes permissions "qlhdn") (includes permissions "qlkho"))}}
+      <li>
+        <a href="/admin/warehouse/receipt">
+          <span class="icon"><i class="fas fa-file-invoice-dollar"></i></span>
+          <span class="title">Hóa Đơn Nhập</span>
+        </a>
+      </li>
+    {{/if}}
     <li>
       <a href="/">
         <span class="icon"><i class="fas fa-file-invoice"></i></span>
         <span class="title">Hóa Đơn Bán</span>
       </a>
     </li>
+    {{#if
+      (or (includes permissions "qlthongke") (includes permissions "qlkho"))
+    }}
+      <li>
+        <a href="/admin/warehouse/statistic">
+          <span class="icon"><i class="fas fa-chart-bar"></i></span>
+          <span class="title">Thống Kê Nhập</span>
+        </a>
+      </li>
+    {{/if}}
     <li>
-      <a href="/admin/warehouse/statistic">
+      <a href="/admin/sales/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
-        <span class="title">Thống Kê</span>
+        <span class="title">Thống Kê Bán</span>
       </a>
     </li>
     <li>
