--- a/src/resources/views/partials/salesmenu.hbs
+++ b/src/resources/views/partials/salesmenu.hbs
@@ -19,11 +19,12 @@
     {{#if
       (or (includes permissions "qlhdx") (includes permissions "qlbanhang"))
     }}
+
       <li>
         <a href="/admin/sales/orders/show">
-          <!-- Liên kết đến orders/show -->
-          <span><i class="fas fa-shopping-cart"></i></span>
-          <span>Đơn Hàng</span>
+          <!-- Liên kết đến statistic -->
+          <span><i class="fas fa-chart-bar"></i></span>
+          <span>Thống Kê</span>
         </a>
       </li>
     {{/if}}
