--- a/src/resources/views/user/confirm.hbs
+++ b/src/resources/views/user/confirm.hbs
@@ -1,6 +1,6 @@
 
 
-<div class="bg-white mt-4  flex flex-col items-center justify-center font-sans">
+<div class="bg-white mt-4  flex flex-col items-center justify-center font-sans min-h-screen">
 
   <!-- Background dots -->
   <div class=" bg-gradient-to-br from-white to-white">
