--- a/src/resources/views/user/thanhtoan.hbs
+++ b/src/resources/views/user/thanhtoan.hbs
@@ -1,5 +1,5 @@
 
-<form method="POST" action="/cart/confirm">
+<form method="POST" action="/cart/confirm" >
   <div class="bg-gray-100">
     <div class="max-w-3xl mx-auto p-6 bg-white rounded-2xl shadow-md mt-10">
       <h2 class="text-2xl font-bold mb-6 text-gray-800">ĐỊA CHỈ GIAO HÀNG</h2>
@@ -17,7 +17,7 @@
       </div>
 
       <!-- Tỉnh/Thành phố -->
-      <div>
+      <div class="overflow-visible z-10 relative">
         <label class="block text-sm font-medium text-gray-700 mb-1">Tỉnh/Thành Phố</label>
         <select id="province" name="thanhpho" required class="w-full border border-gray-300 rounded-xl px-4 py-2 focus:ring-2 focus:ring-blue-500 transition">
           <option value="">Chọn tỉnh/thành phố</option>
@@ -25,7 +25,7 @@
       </div>
 
       <!-- Quận/Huyện -->
-      <div>
+      <div class="overflow-visible z-10 relative">
         <label class="block text-sm font-medium text-gray-700 mb-1">Quận/Huyện</label>
         <select id="district" name="quan" required class="w-full border border-gray-300 rounded-xl px-4 py-2 focus:ring-2 focus:ring-blue-500 transition">
           <option value="">Chọn quận/huyện</option>
@@ -33,7 +33,7 @@
       </div>
 
       <!-- Phường/Xã -->
-      <div>
+      <div class="overflow-visible z-10 relative">
         <label class="block text-sm font-medium text-gray-700 mb-1">Phường/Xã</label>
         <select id="ward" name="ward" required class="w-full border border-gray-300 rounded-xl px-4 py-2 focus:ring-2 focus:ring-blue-500 transition">
           <option value="">Chọn phường/xã</option>
