--- a/src/public/css/sales/order.css
+++ b/src/public/css/sales/order.css
@@ -24,8 +24,11 @@
 
 .order-title {
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 600;
+  color: #003147;
   margin-bottom: 1rem;
+  border-left: 4px solid #003147;
+  padding-left: 10px;
 }
 
 .order-filters {
