chỉnh tí giao diện

--- a/src/public/css/admin/style.css
+++ b/src/public/css/admin/style.css
@@ -12,6 +12,12 @@ body {
   position: relative;
   width: 100%;
 }
+
+.title h2 {
+  font-weight: bold;
+  font-size: larger;
+}
+
 .navigation {
   position: fixed;
   width: 230px;
