--- a/src/public/css/sales/output.css
+++ b/src/public/css/sales/output.css
@@ -442,7 +442,7 @@
   .float-start {
     float: inline-start;
   }
-  .container {
+  /* .container {
     width: 100%;
     @media (width >= 40rem) {
       max-width: 40rem;
@@ -459,7 +459,7 @@
     @media (width >= 96rem) {
       max-width: 96rem;
     }
-  }
+  } */
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
