--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -8,6 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="/css/admin/style.css" />
+    <link rel="stylesheet" href="/css/sales/output.css" />
     {{{_blocks.css}}}
 
   </head>
