--- a/src/resources/views/sales/orders/detail.hbs
+++ b/src/resources/views/sales/orders/detail.hbs
@@ -10,7 +10,7 @@
 
 <div class="main-content">
   <!-- nav bar -->
-  <div class="navbar">
+  {{!-- <div class="navbar">
     <div class="navbar-toggle">
       {{! <i class="fas fa-bars"></i> }}
     </div>
@@ -23,7 +23,7 @@
     <div class="user-profile">
       <a href="#"><img src="/user.jpg" /></a>
     </div>
-  </div>
+  </div> --}}
 
   <div class="order-details-container">
     <div class="order-header">
