--- a/src/resources/views/sales/statistic.hbs
+++ b/src/resources/views/sales/statistic.hbs
@@ -5,7 +5,7 @@
 
   <div class="main-content">
     <!-- nav bar -->
-    <div class="navbar">
+    {{!-- <div class="navbar">
       <div class="navbar-toggle">
         {{! <i class="fas fa-bars"></i> }}
       </div>
@@ -18,7 +18,7 @@
       <div class="user-profile">
         <a href="#"><img src="/user.jpg" /></a>
       </div>
-    </div>
+    </div> --}}
 
     <!-- Nội dung thống kê doanh thu -->
     <div class="statistics-container">
