--- a/src/public/css/sales/order.css
+++ b/src/public/css/sales/order.css
@@ -12,6 +12,8 @@
 /* Order Management */
 .order-content {
   padding: 1.25rem;
+  margin-top: 20px;
+  background-color: white;
 }
 
 .order-header {
