--- a/src/resources/views/sales/customers/edit.hbs
+++ b/src/resources/views/sales/customers/edit.hbs
@@ -8,7 +8,7 @@
 
 <div class="main-content">
   <!-- nav bar -->
-  <div class="navbar">
+  {{!-- <div class="navbar">
     <div class="navbar-toggle">
       {{! <i class="fas fa-bars"></i> }}
     </div>
@@ -21,7 +21,7 @@
     <div class="user-profile">
       <a href="#"><img src="/img/user.jpg" /></a>
     </div>
-  </div>
+  </div> --}}
 
   <div class="customer-content">
     <div class="customer-header">
