--- a/src/resources/views/sales/dashboard.hbs
+++ b/src/resources/views/sales/dashboard.hbs
@@ -8,7 +8,7 @@
 
   <div class="main-content">
     <!-- nav bar -->
-    <div class="navbar">
+    {{!-- <div class="navbar">
       <div class="navbar-toggle">
         {{! <i class="fas fa-bars"></i> }}
       </div>
@@ -21,7 +21,7 @@
       <div class="user-profile">
         <a href="#"><img src="/user.jpg" alt="User Profile" /></a>
       </div>
-    </div>
+    </div> --}}
 
     <!-- Dashboard content -->
     <div class="dashboard-content">
