--- a/src/resources/views/sales/orders/show.hbs
+++ b/src/resources/views/sales/orders/show.hbs
@@ -11,7 +11,7 @@
 
   <div class="main-content">
     <!-- nav bar -->
-    <div class="navbar">
+    {{!-- <div class="navbar">
       <div class="navbar-toggle">
         {{! <i class="fas fa-bars"></i> }}
       </div>
@@ -24,7 +24,7 @@
       <div class="user-profile">
         <a href="#"><img src="/img/user.jpg" /></a>
       </div>
-    </div>
+    </div> --}}
 
     <!-- Nội dung quản lý đơn hàng -->
     <div class="order-content">
