--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -2,11 +2,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Doanh Nghiệp</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <title>BOOK STORE</title>
+    <link rel="stylesheet" href="/css/all.min.css" />
     <link rel="stylesheet" href="/css/admin/style.css" />
     {{{_blocks.css}}}
 
