--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -7,38 +7,58 @@
       </a>
     </li>
     <li>
+      {{#if (includes permissions "qlkho")}}
+      <a href="/admin/warehouse">
+        <span class="icon"><i class="fas fa-home"></i></span>
+        <span class="title">Tổng Quan</span>
+      </a>
+      {{/if}}
+      {{#if (includes permissions "admin")}}
       <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-home"></i></span>
         <span class="title">Tổng Quan</span>
       </a>
+      {{/if}}
+      {{#if (includes permissions "qlbanhang")}}
+      <a href="/admin/sales">
+        <span class="icon"><i class="fas fa-home"></i></span>
+        <span class="title">Tổng Quan</span>
+      </a>
+      {{/if}}
     </li>
+    {{#if (or (includes permissions "nhomquyen") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
     <li>
       <a href="/admin/permissions">
         <span class="icon"><i class="fas fa-hands"></i></span>
         <span class="title">Nhóm Quyền</span>
       </a>
     </li>
+    {{/if}}
+    {{#if (or (includes permissions "taikhoan") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
     <li>
-      <a href="/admin/dashboard">
+      <a href="/admin/account">
         <span class="icon"><i class="fas fa-address-book"></i></span>
         <span class="title">Tài Khoản</span>
       </a>
     </li>
+    {{/if}}
+    {{#if (or (includes permissions "nhanvien") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
     <li>
       <a href="/admin/employee">
         <span class="icon"><i class="fas fa-users-cog"></i></span>
         <span class="title">Nhân Viên</span>
       </a>
     </li>
+    {{/if}}
+    {{#if (or (includes permissions "qlkhachhang") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
     <li>
-      <a href="/admin/dashboard">
+      <a href="/admin/sales/customer">
         <span class="icon"><i class="fas fa-users"></i></span>
         <span class="title">Khách Hàng</span>
       </a>
     </li>
-    {{#if
-      (or (includes permissions "qlsanpham") (includes permissions "qlkho"))
-    }}
+    {{/if}}
+    {{#if (or (includes permissions "qlsanpham") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
       <li>
         <a href="/admin/warehouse/product">
           <span class="icon"><i class="fas fa-gifts"></i></span>
@@ -46,9 +66,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if
-      (or (includes permissions "qldanhmuc") (includes permissions "qlkho"))
-    }}
+    {{#if (or (includes permissions "qldanhmuc") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
       <li>
         <a href="/admin/warehouse/category">
           <span class="icon"><i class="fas fa-clipboard-list"></i></span>
@@ -56,7 +74,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qlncc") (includes permissions "qlkho"))}}
+    {{#if (or (includes permissions "qlncc") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
       <li>
         <a href="/admin/warehouse/provider">
           <span class="icon"><i class="fas fa-warehouse"></i></span>
@@ -64,7 +82,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qlhdn") (includes permissions "qlkho"))}}
+    {{#if (or (includes permissions "qlhdn") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
       <li>
         <a href="/admin/warehouse/receipt">
           <span class="icon"><i class="fas fa-file-invoice-dollar"></i></span>
@@ -72,28 +90,30 @@
         </a>
       </li>
     {{/if}}
+    {{#if (or (includes permissions "qlhdx") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
     <li>
-      <a href="/">
+      <a href="/admin/sales/orders/show">
         <span class="icon"><i class="fas fa-file-invoice"></i></span>
         <span class="title">Hóa Đơn Bán</span>
       </a>
     </li>
-    {{#if
-      (or (includes permissions "qlthongke") (includes permissions "qlkho"))
-    }}
-      <li>
-        <a href="/admin/warehouse/statistic">
-          <span class="icon"><i class="fas fa-chart-bar"></i></span>
-          <span class="title">Thống Kê Nhập</span>
-        </a>
-      </li>
     {{/if}}
+    {{#if (or (includes permissions "qlthongkenhap") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    <li>
+      <a href="/admin/warehouse/statistic">
+        <span class="icon"><i class="fas fa-chart-bar"></i></span>
+        <span class="title">Thống Kê Nhập</span>
+      </a>
+    </li>
+    {{/if}}
+    {{#if (or (includes permissions "qlthongkexuat") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
     <li>
       <a href="/admin/sales/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
         <span class="title">Thống Kê Bán</span>
       </a>
     </li>
+    {{/if}}
     <li>
       <a href="/admin/logout">
         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
