--- a/src/resources/views/admin/create_employee.hbs
+++ b/src/resources/views/admin/create_employee.hbs
@@ -29,7 +29,7 @@
                             <option value="{{this}}">{{this}}</option>
                         {{/each}}
                     </select>
-                    <input style="font-size:16px; width: 100px;" type="text" name="dob_year" placeholder="Năm" required>
+                    <input style="font-size:16px;width: 100px;border:1px solid #000;" type="text" name="dob_year" placeholder="Năm" required>
                 </div>
             </div>
             <div class="form-group">
@@ -75,7 +75,7 @@
                             <option value="{{this}}">{{this}}</option>
                         {{/each}}
                     </select>
-                    <input style="font-size:16px; width: 100px;" type="text" name="dow_year" placeholder="Năm" required>
+                    <input style="font-size:16px;width: 100px;border:1px solid #000;" type="text" name="dow_year" placeholder="Năm" required>
                 </div>
             </div>
             <div class="form-group">
