--- a/src/resources/views/admin/update_employee.hbs
+++ b/src/resources/views/admin/update_employee.hbs
@@ -33,7 +33,7 @@
                             <option value="{{this}}" {{#if (eq this ../employee.dob_month)}}selected{{/if}}>{{this}}</option>
                         {{/each}}
                     </select>
-                    <input style="font-size:16px; width: 100px;" type="text" value="{{employee.dob_year}}" name="dob_year" placeholder="Năm" required>
+                    <input style="font-size:16px;width: 100px;border:1px solid #000;" type="text" value="{{employee.dob_year}}" name="dob_year" placeholder="Năm" required>
                 </div>
             </div>
             <div class="form-group">
@@ -79,7 +79,7 @@
                             <option value="{{this}}" {{#if (eq this ../employee.dow_month)}}selected{{/if}}>{{this}}</option>
                         {{/each}}
                     </select>
-                    <input style="font-size:16px; width: 100px;" type="text" value="{{employee.dow_year}}" name="dow_year" placeholder="Năm" required>
+                    <input style="font-size:16px;width: 100px;border:1px solid #000;" type="text" value="{{employee.dow_year}}" name="dow_year" placeholder="Năm" required>
                 </div>
             </div>
             <div class="form-group">
