--- a/src/resources/views/warehouse/product.hbs
+++ b/src/resources/views/warehouse/product.hbs
@@ -76,7 +76,7 @@
               <td>
                 <div class="image-container">
                   <img src="{{this.Anh}}" width="80" />
-                  <span class="view-more">+ Thêm</span>
+                  <span class="view-more">+</span>
                 </div>
               </td>
               <td data-value="{{this.Gia}}">{{formatCurrency this.Gia}}</td>
