--- a/src/public/css/warehouse/provider.css
+++ b/src/public/css/warehouse/provider.css
@@ -64,6 +64,7 @@
     border-radius: 5px;
     margin-bottom: 1rem;
     font-size: 16px;
+    border: 1px solid #000;
 }
 .search-container{
     display: flex;
