--- a/src/public/css/warehouse/statistic.css
+++ b/src/public/css/warehouse/statistic.css
@@ -74,6 +74,7 @@ select{
     font-size: 16px;
     border-radius: 5px;
     padding: 5px 0;
+    border: 1px solid #000;
 }
 label{
     font-size: 16px;
