--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -1,31 +1,35 @@
 <div class="navigation">
   <ul>
     <li>
-      <a href="/admin/dashboard">
+      <a href="#">
         <span class="icon" style="min-width: 30px;"></span>
         <span class="title"><h2>BOOKSTORE</h2></span>
       </a>
     </li>
+    {{#if (includes permissions "qlkho")}}
     <li>
-      {{#if (includes permissions "qlkho")}}
       <a href="/admin/warehouse">
         <span class="icon"><i class="fas fa-home"></i></span>
         <span class="title">Tổng Quan</span>
       </a>
-      {{/if}}
-      {{#if (includes permissions "admin")}}
+    </li>
+    {{/if}}
+    {{#if (includes permissions "admin")}}
+    <li>
       <a href="/admin/dashboard">
         <span class="icon"><i class="fas fa-home"></i></span>
         <span class="title">Tổng Quan</span>
       </a>
-      {{/if}}
-      {{#if (includes permissions "qlbanhang")}}
+    </li>
+    {{/if}}
+    {{#if (includes permissions "qlbanhang")}}
+    <li>
       <a href="/admin/sales">
         <span class="icon"><i class="fas fa-home"></i></span>
         <span class="title">Tổng Quan</span>
       </a>
-      {{/if}}
     </li>
+    {{/if}}
     {{#if (or (includes permissions "nhomquyen") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
     <li>
       <a href="/admin/permissions">
@@ -52,7 +56,7 @@
     {{/if}}
     {{#if (or (includes permissions "qlkhachhang") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
     <li>
-      <a href="/admin/sales/customer">
+      <a href="/admin/sales/khachhang">
         <span class="icon"><i class="fas fa-users"></i></span>
         <span class="title">Khách Hàng</span>
       </a>
@@ -110,7 +114,7 @@
     <li>
       <a href="/admin/sales/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
-        <span class="title">Thống Kê Bán</span>
+        <span class="title">Thống Kê Xuất</span>
       </a>
     </li>
     {{/if}}
