--- a/src/resources/views/sales/customers/show.hbs
+++ b/src/resources/views/sales/customers/show.hbs
@@ -8,7 +8,7 @@
 
 <div class="main-content">
   <!-- nav bar -->
-  <div class="navbar">
+  {{!-- <div class="navbar">
     <div class="navbar-toggle">
       {{! <i class="fas fa-bars"></i> }}
     </div>
@@ -21,7 +21,7 @@
     <div class="user-profile">
       <a href="#"><img src="/img/user.jpg" /></a>
     </div>
-  </div>
+  </div> --}}
 
   <div class="customer-content">
     <div class="customer-header">
@@ -62,11 +62,13 @@
                 <i class="fas fa-file-export"></i>
                 Xuất Excel 
               </button>
+              {{#if (or (includes action "create") (includes action "all"))}}
               <button class="addCustomer-button" type="button">
                   <a href="/admin/sales/khachhang/create">
                        <i class="fas fa-user-plus"></i> Thêm khách hàng
                   </a>
               </button>
+              {{/if}}
           </div>
         </form>
       </div>
@@ -161,12 +163,16 @@
                       <a href="/admin/sales/khachhang/detail/{{this.ID_KH}}" class="view-button" title="Xem chi tiết">
                         <i class="fas fa-eye"></i>
                       </a>
+                      {{#if (or (includes ../action "edit") (includes ../action "all"))}}
                       <a href="/admin/sales/khachhang/edit/{{this.ID_KH}}" class="edit-button" title="Chỉnh sửa">
                         <i class="fas fa-edit"></i>
                       </a>
+                      {{/if}}
+                      {{#if (or (includes ../action "delete") (includes ../action "all"))}}
                       <button type="button" class="delete-button" data-id="{{this.ID_KH}}" title="Xóa" data-name="{{this.TenKH}}">
                         <i class="fas fa-trash-alt"></i>
                       </button>
+                      {{/if}}
                     </div>
                   </td>
                 </tr>
