--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -30,7 +30,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "nhomquyen") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "nhomquyen")}}
     <li>
       <a href="/admin/permissions">
         <span class="icon"><i class="fas fa-hands"></i></span>
@@ -38,7 +38,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "taikhoan") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "taikhoan")}}
     <li>
       <a href="/admin/account">
         <span class="icon"><i class="fas fa-address-book"></i></span>
@@ -46,7 +46,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "nhanvien") (includes permissions "admin") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "nhanvien")}}
     <li>
       <a href="/admin/employee">
         <span class="icon"><i class="fas fa-users-cog"></i></span>
@@ -54,7 +54,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "qlkhachhang") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlkhachhang")}}
     <li>
       <a href="/admin/sales/khachhang">
         <span class="icon"><i class="fas fa-users"></i></span>
@@ -62,7 +62,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "qlsanpham") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlsanpham")}}
       <li>
         <a href="/admin/warehouse/product">
           <span class="icon"><i class="fas fa-gifts"></i></span>
@@ -70,7 +70,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qldanhmuc") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qldanhmuc")}}
       <li>
         <a href="/admin/warehouse/category">
           <span class="icon"><i class="fas fa-clipboard-list"></i></span>
@@ -78,7 +78,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qlncc") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlncc")}}
       <li>
         <a href="/admin/warehouse/provider">
           <span class="icon"><i class="fas fa-warehouse"></i></span>
@@ -86,7 +86,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qlhdn") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlhdn")}}
       <li>
         <a href="/admin/warehouse/receipt">
           <span class="icon"><i class="fas fa-file-invoice-dollar"></i></span>
@@ -94,7 +94,7 @@
         </a>
       </li>
     {{/if}}
-    {{#if (or (includes permissions "qlhdx") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlhdx")}}
     <li>
       <a href="/admin/sales/orders/show">
         <span class="icon"><i class="fas fa-file-invoice"></i></span>
@@ -102,7 +102,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "qlthongkenhap") (includes permissions "qlkho") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlthongkenhap")}}
     <li>
       <a href="/admin/warehouse/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
@@ -110,7 +110,7 @@
       </a>
     </li>
     {{/if}}
-    {{#if (or (includes permissions "qlthongkexuat") (includes permissions "qlbanhang") (includes permissions "qldoanhnghiep"))}}
+    {{#if (includes permissions "qlthongkexuat")}}
     <li>
       <a href="/admin/sales/statistic">
         <span class="icon"><i class="fas fa-chart-bar"></i></span>
