--- a/src/resources/views/errors/403.hbs
+++ b/src/resources/views/errors/403.hbs
@@ -30,7 +30,7 @@
       {{else if (eq access "qlbanhang")}}
         <a href="/admin/sales">Quay lại trang chủ</a>
       {{else}}
-        <a href="/admin">Quay lại trang chủ</a>
+        <a href="/admin/dashboard">Quay lại trang chủ</a>
       {{/if}}
     </div>
   </body>
