--- a/src/resources/views/warehouse/statistic.hbs
+++ b/src/resources/views/warehouse/statistic.hbs
@@ -100,7 +100,7 @@
                             {{/if}} --}}
                             <td>
                                 <div class="button-container">
-                                    <a href="/admin/warehouse/receipt/view/{{this.IDHoaDonNhap}}">
+                                    <a href="/admin/warehouse/receipt/view/{{this.IDHoaDonNhap}}?from=statistic">
                                         <button class="icon-btn view-btn">
                                             <i class="fas fa-eye"></i>
                                             <span class="tooltip">Chi tiết</span>
