--- a/src/public/css/warehouse/receipt.css
+++ b/src/public/css/warehouse/receipt.css
@@ -171,6 +171,27 @@ input[type="checkbox"]{
     color: rgb(0, 0, 0, 0.5);
     margin-bottom: 15px;
 }
+.title-with-back {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.btn-back-round {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #f8f9fa;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #000;
+  transition: all 0.3s;
+}
+.btn-back-round:hover {
+  background-color: var(--gray);
+}
 .delivered{
     position: relative;
     padding: 2px 10px;
