--- a/src/resources/views/warehouse/receipt.hbs
+++ b/src/resources/views/warehouse/receipt.hbs
@@ -61,18 +61,12 @@
                         {{/if}} --}}
             <td>
               <div class="button-container">
-                <a href="/admin/warehouse/receipt/view/{{this.IDHoaDonNhap}}">
+                <a href="/admin/warehouse/receipt/view/{{this.IDHoaDonNhap}}?from=list">
                   <button class="icon-btn view-btn">
                     <i class="fas fa-eye"></i>
                     <span class="tooltip">Chi tiết</span>
                   </button>
                 </a>
-                {{!-- <a href="//admin/warehouse/receipt/update/{{this.IDHoaDonNhap}}">
-                                    <button class="icon-btn edit-btn">
-                                        <i class="fas fa-edit"></i>
-                                        <span class="tooltip">Chỉnh sửa</span>
-                                    </button>
-                                </a> --}}
               </div>
             </td>
           </tr>
