--- a/src/resources/views/admin/login.hbs
+++ b/src/resources/views/admin/login.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BOOK STORE</title>
     <link rel="stylesheet" href="/bootstrap-5.0.2-dist/css/bootstrap.min.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
                 <form action="/admin/login" method="POST">
 
                   <!-- Email input -->
-                  <div class="form-outline mb-4">
+                  <div class="form-outline mb-3">
                     <input
                       name="id"
                       type="text"
@@ -38,7 +38,7 @@
                   </div>
 
                   <!-- Password input -->
-                  <div class="form-outline mb-3">
+                  <div class="form-outline mb-2">
                     <input
                       name="password"
                       type="password"
@@ -48,31 +48,11 @@
                     />
                     <label class="form-label" for="form3Example4">Mật khẩu</label>
                   </div>
-
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <!-- Checkbox -->
-                    <div class="form-check mb-0">
-                      <input
-                        class="form-check-input me-2"
-                        type="checkbox"
-                        value=""
-                        id="form2Example3"
-                      />
-
-                    </div>
-                    <a href="#!" class="text-body">Quên mật khẩu?</a>
-                  </div>
-
+                  <p style="color: red;">{{error}}</p>
                   <div class="text-center text-lg-start mt-4 pt-2">
                     <button type="submit" class="btn btn-primary btn-lg">Đăng
                       nhập</button>
-
-                    <p class="small fw-bold mt-2 pt-1 mb-0">Không có tài khoản?
-                      <a href="#!" class="link-danger">Đăng ký ngay</a></p>
                   </div>
-
                 </form>
               </div>
             </div>
@@ -80,8 +60,6 @@
         </div>
       </section>
     </main>
-    <footer>
 
-    </footer>
   </body>
 </html>
